fix(styling): solving on mobile
BREAKING CHANGE: KIA-18, KIA-19

--- a/src/style/partials/helpers.sass
+++ b/src/style/partials/helpers.sass
@@ -16,9 +16,9 @@
 .align-left
     text-align: left
 .no-margin
-    margin: 0
+    margin: 0 !important
 .no-padding
-    padding: 0
+    padding: 0 !important
 .p-b-50
     padding-bottom: 50px
 .p-20
